@@ -19,9 +19,9 @@ using System.Security;
 [assembly: AssemblyCompanyAttribute("NHibernate Community - www.nhforge.org")]
 [assembly: AssemblyProductAttribute("NHibernate.Validator.Specific")]
 [assembly: AssemblyCopyrightAttribute("Licensed under LGPL.")]
-[assembly: AssemblyVersionAttribute("1.3.0.1001")]
-[assembly: AssemblyInformationalVersionAttribute("1.3.0.1001")]
-[assembly: AssemblyFileVersionAttribute("1.3.0.1001")]
+[assembly: AssemblyVersionAttribute("1.3.0.2001")]
+[assembly: AssemblyInformationalVersionAttribute("1.3.0.2001")]
+[assembly: AssemblyFileVersionAttribute("1.3.0.2001")]
 [assembly: AssemblyDelaySignAttribute(false)]
 [assembly: AssemblyKeyFileAttribute("..\\..\\..\\..\\src\\NHibernate.Validator.snk")]
 [assembly: AllowPartiallyTrustedCallersAttribute()]
